2007-03-09 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.lex, src/SDCCast.c. src/SDCCglobl.c, src/SDCCsymt.c,
	  src/SDCCval.c: fixed bugs #1676768: Wrong line number reported and
	  1673361: Missaligned comments in output files

2007-03-09 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic14devices.txt: fixed confsiz of 16f91[3467]

2007-03-09 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c,
	* src/pic/glue.c,
	* src/pic/ralloc.c: suppress undesired debug output
	* src/SDCCmain.c (linkEdit): initialize c to quieten compiler

2007-03-08 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/printf_large.c: 6 bytes less __data mem (6 more __idata)

2007-03-07 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libdev/pic18f[24][34]31.c:
	  search include files in the current directory

2007-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (emitMaps, glue),
	* src/SDCCmem.c (initMem, allocDefault): added x_abs for initialized
	  absolute xdata
	* support/regression/tests/absolute.c: added xdata test

2007-03-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (parseCmdLine): only set options.xstack_loc for mcs51,
	  added condition to macro, fixes bug 1666080

2007-03-02 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genGenPointerSet): removed bogus assertion

2007-02-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/lib/mcs51/crtxclear.asm: pdata segment of 256 byte would not
	be cleared. Unconditionally set __XPAGE
	* src/hc08/gen.c: --no-gen-comments (RFE #1493816) for hc08

2007-02-27 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCglobl.h,
	* src/SDCCmain.c,
	* src/mcs51/gen.c,
	* src/mcs51/rtrack.c,
	* src/ds390/gen.c,
	* doc/sdccman.lyx: added --no-gen-comments
	* src/mcs51/peeph.def: added 192.b, disabled 185

2007-02-25 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genCast): fixed typo
	* device/lib/pic16/Makefile.subdir: only install existing files